// <auto-generated />
using System;
using FaithTechTorontoAiBuildEvent.Infrastructure.Persistence;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;

#nullable disable

namespace FaithTechTorontoAiBuildEvent.Infrastructure.Persistence.Migrations
{
    [DbContext(typeof(CompanionDbContext))]
    partial class CompanionDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.11")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("FaithTechTorontoAiBuildEvent.Domain.Access.AdministratorLoginAttempt", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTimeOffset>("AttemptedAtUtc")
                        .HasColumnType("datetimeoffset");

                    b.Property<string>("Source")
                        .IsRequired()
                        .HasMaxLength(64)
                        .HasColumnType("nvarchar(64)");

                    b.HasKey("Id");

                    b.HasIndex("Source", "AttemptedAtUtc");

                    b.ToTable("AdministratorLoginAttempts");
                });

            modelBuilder.Entity("FaithTechTorontoAiBuildEvent.Domain.Access.AdministratorSession", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTimeOffset>("CreatedAtUtc")
                        .HasColumnType("datetimeoffset");

                    b.Property<long>("CredentialRevision")
                        .HasColumnType("bigint");

                    b.Property<DateTimeOffset>("LastInteractionAtUtc")
                        .HasColumnType("datetimeoffset");

                    b.Property<bool>("Revoked")
                        .HasColumnType("bit");

                    b.Property<byte[]>("SecretDigest")
                        .IsRequired()
                        .HasMaxLength(32)
                        .HasColumnType("varbinary(32)");

                    b.HasKey("Id");

                    b.HasIndex("CreatedAtUtc");

                    b.ToTable("AdministratorSessions");
                });

            modelBuilder.Entity("FaithTechTorontoAiBuildEvent.Domain.Access.CompanionCredential", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<DateTimeOffset>("ChangedAtUtc")
                        .HasColumnType("datetimeoffset");

                    b.Property<long>("Revision")
                        .HasColumnType("bigint");

                    b.Property<byte[]>("Salt")
                        .IsRequired()
                        .HasMaxLength(32)
                        .HasColumnType("varbinary(32)");

                    b.Property<byte[]>("Verifier")
                        .IsRequired()
                        .HasMaxLength(64)
                        .HasColumnType("varbinary(64)");

                    b.HasKey("Id");

                    b.ToTable("CompanionCredentials");
                });

            modelBuilder.Entity("FaithTechTorontoAiBuildEvent.Domain.EventFlow.EventChange", b =>
                {
                    b.Property<long>("Version")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<long>("Version"));

                    b.Property<DateTimeOffset>("OccurredAtUtc")
                        .HasColumnType("datetimeoffset");

                    b.HasKey("Version");

                    b.ToTable("EventChanges");
                });

            modelBuilder.Entity("FaithTechTorontoAiBuildEvent.Domain.EventFlow.EventState", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("CurrentScreen")
                        .IsRequired()
                        .HasMaxLength(16)
                        .HasColumnType("nvarchar(16)");

                    b.Property<long>("NextParticipantLabel")
                        .HasColumnType("bigint");

                    b.Property<long>("NextTeamLabel")
                        .HasColumnType("bigint");

                    b.Property<bool>("TeamsFormed")
                        .HasColumnType("bit");

                    b.Property<long>("Version")
                        .HasColumnType("bigint");

                    b.HasKey("Id");

                    b.ToTable("EventStates");
                });

            modelBuilder.Entity("FaithTechTorontoAiBuildEvent.Domain.Operations.EventOperationReceipt", b =>
                {
                    b.Property<Guid>("OperationId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTimeOffset>("CreatedAtUtc")
                        .HasColumnType("datetimeoffset");

                    b.Property<byte[]>("InputDigest")
                        .IsRequired()
                        .HasMaxLength(32)
                        .HasColumnType("varbinary(32)");

                    b.Property<string>("OperationKind")
                        .IsRequired()
                        .HasMaxLength(64)
                        .HasColumnType("nvarchar(64)");

                    b.Property<Guid?>("ResultId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("ResultJson")
                        .HasColumnType("nvarchar(max)");

                    b.Property<long>("ResultVersion")
                        .HasColumnType("bigint");

                    b.HasKey("OperationId");

                    b.HasIndex("CreatedAtUtc");

                    b.ToTable("EventOperationReceipts");
                });

            modelBuilder.Entity("FaithTechTorontoAiBuildEvent.Domain.Participants.EntryReceipt", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTimeOffset>("ExpiresAtUtc")
                        .HasColumnType("datetimeoffset");

                    b.Property<Guid>("OperationId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<Guid?>("ParticipantId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<bool>("Revoked")
                        .HasColumnType("bit");

                    b.Property<byte[]>("SecretDigest")
                        .IsRequired()
                        .HasMaxLength(32)
                        .HasColumnType("varbinary(32)");

                    b.HasKey("Id");

                    b.HasIndex("ExpiresAtUtc");

                    b.ToTable("EntryReceipts");
                });

            modelBuilder.Entity("FaithTechTorontoAiBuildEvent.Domain.Participants.Participant", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasMaxLength(508)
                        .HasColumnType("nvarchar(508)");

                    b.Property<string>("Name")
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("NormalizedEmail")
                        .IsRequired()
                        .HasMaxLength(508)
                        .HasColumnType("nvarchar(508)");

                    b.Property<string>("OnYourHeart")
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("PublicLabel")
                        .IsRequired()
                        .HasMaxLength(64)
                        .HasColumnType("nvarchar(64)");

                    b.Property<Guid?>("TeamId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("WhatYouMake")
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.HasIndex("NormalizedEmail")
                        .IsUnique();

                    b.ToTable("Participants");
                });

            modelBuilder.Entity("FaithTechTorontoAiBuildEvent.Domain.Participants.ParticipantSession", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTimeOffset>("ExpiresAtUtc")
                        .HasColumnType("datetimeoffset");

                    b.Property<Guid>("ParticipantId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<bool>("Revoked")
                        .HasColumnType("bit");

                    b.Property<byte[]>("SecretDigest")
                        .IsRequired()
                        .HasMaxLength(32)
                        .HasColumnType("varbinary(32)");

                    b.HasKey("Id");

                    b.HasIndex("ExpiresAtUtc");

                    b.ToTable("ParticipantSessions");
                });

            modelBuilder.Entity("FaithTechTorontoAiBuildEvent.Domain.Participants.ProfileSaveReceipt", b =>
                {
                    b.Property<Guid>("ParticipantId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<Guid>("OperationId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<byte[]>("InputDigest")
                        .IsRequired()
                        .HasMaxLength(32)
                        .HasColumnType("varbinary(32)");

                    b.Property<string>("Name")
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("OnYourHeart")
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("WhatYouMake")
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("ParticipantId", "OperationId");

                    b.ToTable("ProfileSaveReceipts");
                });

            modelBuilder.Entity("FaithTechTorontoAiBuildEvent.Domain.Participants.PublicEntryAttempt", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTimeOffset>("AttemptedAtUtc")
                        .HasColumnType("datetimeoffset");

                    b.Property<string>("Source")
                        .IsRequired()
                        .HasMaxLength(64)
                        .HasColumnType("nvarchar(64)");

                    b.HasKey("Id");

                    b.HasIndex("Source", "AttemptedAtUtc");

                    b.ToTable("PublicEntryAttempts");
                });

            modelBuilder.Entity("FaithTechTorontoAiBuildEvent.Domain.Projects.Project", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("DemoUrl")
                        .HasMaxLength(4096)
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasMaxLength(4000)
                        .HasColumnType("nvarchar(4000)");

                    b.Property<string>("RepositoryUrl")
                        .HasMaxLength(4096)
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Title")
                        .IsRequired()
                        .HasMaxLength(400)
                        .HasColumnType("nvarchar(400)");

                    b.HasKey("Id");

                    b.ToTable("Projects");
                });

            modelBuilder.Entity("FaithTechTorontoAiBuildEvent.Domain.Raffle.RaffleCandidate", b =>
                {
                    b.Property<Guid>("DrawId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<Guid>("ParticipantId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("Label")
                        .IsRequired()
                        .HasMaxLength(512)
                        .HasColumnType("nvarchar(512)");

                    b.HasKey("DrawId", "ParticipantId");

                    b.ToTable("RaffleCandidates");
                });

            modelBuilder.Entity("FaithTechTorontoAiBuildEvent.Domain.Raffle.RaffleDraw", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTimeOffset>("EffectsEndAtUtc")
                        .HasColumnType("datetimeoffset");

                    b.Property<long>("ExpectedVersion")
                        .HasColumnType("bigint");

                    b.Property<Guid>("OperationId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTimeOffset>("RevealAtUtc")
                        .HasColumnType("datetimeoffset");

                    b.Property<DateTimeOffset>("StartedAtUtc")
                        .HasColumnType("datetimeoffset");

                    b.Property<string>("WinnerLabel")
                        .IsRequired()
                        .HasMaxLength(512)
                        .HasColumnType("nvarchar(512)");

                    b.Property<Guid?>("WinnerParticipantId")
                        .HasColumnType("uniqueidentifier");

                    b.HasKey("Id");

                    b.HasIndex("OperationId")
                        .IsUnique();

                    b.HasIndex("WinnerParticipantId")
                        .IsUnique()
                        .HasFilter("[WinnerParticipantId] IS NOT NULL");

                    b.ToTable("RaffleDraws");
                });

            modelBuilder.Entity("FaithTechTorontoAiBuildEvent.Domain.Teams.Team", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("Label")
                        .IsRequired()
                        .HasMaxLength(64)
                        .HasColumnType("nvarchar(64)");

                    b.Property<Guid?>("ProjectId")
                        .HasColumnType("uniqueidentifier");

                    b.HasKey("Id");

                    b.ToTable("Teams");
                });
#pragma warning restore 612, 618
        }
    }
}
